---------------------------------------------------------------------------------------------------
Version: 0.5.2
Date: 06.01.2024
  Features:
    - Crystal accumulator now becomes unstable on gaia
    - added descriptions in informatron for space yields
  Changes:
    - halved crystal accumulator energy output on nauvis
  Bugfixes:
    - fixed that artifacts would not spawn on trees or stones
---------------------------------------------------------------------------------------------------
Version: 0.5.1
Date: 03.01.2024
  Features:
    - added productivity option to some bio recipes
  Bugfixes:
    - added missing lang for gaia ressources
    - fixed bug with texplates data-update
    - fixed issue with gaia water
---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 31.12.2023
  Features:
    - alien update: adds nre surface, changes bunch of recipes, overhauls mid and late game of EI
    - induction matrixes now show current stored capacity (PR #29)
    - merry xmas and a good new year!
  Changes:
    - alien update balance changes
    - decreased stack size of barrels to 1
    - increased capacity of barrels by 10 (default in settings)
    - increased yield of alien resin / seeds dropped by flowers
    - removed recipe for air filter to extract water
    - increased richness of deep ores
    - walls now resist cannon shell explosions
  Bugfixes:
    - fixed gold text plates integration (PR #28)
    - resized beacons and turbines to allow walking past (PR #27)

---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 17.06.2023
  Features:
    - integrated new 6x6 containers of EI container mod
    - added new recipes to use benzol and coal gas
    - added integration for Cheese's concentrated solar
  Changes:
    - updated RU locale (PR #18)
    - updated Informatron (PR #19)