@@ -758,6 +758,8 @@ ei_farstation-repair=Kit to repair broken farstations. Drag it over one like a n
 ei_alien-beacon-repair=Kit to repair broken alien beacons. Drag it over one like a normal selection tool.
 ei_gaia-pump=An offshore pump made for Gaia.
 
+ei_alien-flowers-1=Suspicious alien life. Place it and [color=orange]shoot[/color] or [color=purple]scan[/color][item=ei_scanner] them to get loot and knowledge.
+
 [fuel-category-name]
 ei_nuclear-fuel=Nuclear fission fuel
 ei_rocket-fuel=Rocket fuel
@@ -835,6 +837,8 @@ ei_alien=Alien related
 ei_induction-matrix-tile=Induction matrix floor
 
 [exotic-industries]
+gate-exit-container-set=Gate exit set to [color=yellow]__1__[/color] at [gps=__2__,__3__]. Connected with [entity=__4__]container.
+gate-exit-set=Gate exit set to [color=yellow]__1__[/color] at [gps=__2__,__3__].
 building-degraded=[img=utility/warning_icon] [entity=__1__]Building degraded over time at [gps=__2__,__3__].
 alien-migration-complete=[img=utility/warning_icon] [color=red]Exotic Industries 0.5.0 (alien update) adds potentially breaking changes to the mod.[/color] \n\nStarting a new game is recommended, as recipes, technologies and mechanics of mid and lategame got heavy changes. See changelog for more info.
 scanner-no-effect=Not scanning anything.
