@@ -4,10 +4,14 @@ Date: 06.01.2024
   Features:
     - Crystal accumulator now becomes unstable on gaia
     - added descriptions in informatron for space yields
+    - alien flowers can now also be mined and placed again
+    - gate can now also port into logistc containers, added chat message if container got connected
   Changes:
     - halved crystal accumulator energy output on nauvis
+    - increased range of drone for mining
   Bugfixes:
     - fixed that artifacts would not spawn on trees or stones
+    - fixed issue with gate and remote configuration mod
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.1
 Date: 03.01.2024
